Fix submit button alignment

--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,7 @@ a:visited {
 #project-icon {
     margin: 0.5em;
 }
+
+#submit {
+    margin-left: 14em;
+}
